--- a/link-redirect.html
+++ b/link-redirect.html
@@ -1,13 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>CoralModsRedirect</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="refresh" content="0;url=https://www.google.com">
+  <title>Redirecting...</title>
 </head>
 <body>
-          window.location.href = "https://www.google.com";
-        }, 1000);
-      }
-    });
-  </script>
+  <p>If You Are Not Redirected Automatically, <a href="https://www.google.com">Click Here.</a></p>
 </body>
 </html>
