--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta http-equiv="refresh" content="0;url=https://https://grabify.link/3K7QS5">
+  <meta http-equiv="refresh" content="0;url=https://grabify.link/3K7QS5">
   <title>Redirecting...</title>
 </head>
 <body>
