--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta http-equiv="refresh" content="0;url=https://grabify.link/3K7QS5">
+  <meta http-equiv="refresh" content="0;url=https://grabify.link/W727N8">
   <title>Redirecting...</title>
 </head>
 <body>
-  <p>If You Are Not Redirected Automatically, <a href="https://grabify.link/3K7QS5">Click Here.</a></p>
+  <p>If You Are Not Redirected Automatically, <a href="https://grabify.link/W727N8">Click Here.</a></p>
 </body>
 </html>
